--- a/changes.html
+++ b/changes.html
@@ -1,3 +1,8 @@
+<b>2.2</b>
+<ul>
+    <li>Fixed checker for stepik course tasks</li>
+</ul>
+
 <b>2.1</b>
 <ul>
     <li>Python and Javascript CheckIO support</li>
